--- a/GameData/DavonTCsystemsMod/Parts/DifferentialThrustModule/part.cfg
+++ b/GameData/DavonTCsystemsMod/Parts/DifferentialThrustModule/part.cfg
@@ -20,7 +20,7 @@ iconCenter = 0, 3, 0
 
 // --- node definitions ---
 // definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
-node_attach = 0.0, 0.0, -.05, 0.0, 0.0, 1.0
+node_attach = 0.0, 0.0, 0.02, 0.0, 0.0, 1.0
 
 // --- FX definitions ---
 
