Added throttle steering

--- a/GameData/DavonTCsystemsMod/Parts/DifferentialThrustModule/part.cfg
+++ b/GameData/DavonTCsystemsMod/Parts/DifferentialThrustModule/part.cfg
@@ -54,11 +54,8 @@ name = DifferentialThrust
 //default direction of thrust 0 through 5 (backward, forward, down, up, left, right)
 CenterThrustDirection = 0
 
-//wether to only use designated engines for centerthrust. 1 = yes, 0 = no
+//wether to only use designated engines for centerthrust. 1 = All, 0 = Designated
 selEngGridInt = 1
-
-// adjustment strenght
-Stradjstr = 10		
 
 }
 
